project(18shadow)
add_executable(18shadow main.cpp)
file(REMOVE_RECURSE ${CMAKE_CURRENT_BINARY_DIR}/shader)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/depth.frag DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/depth.gs DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/depth.vert DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/shadow.frag DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/shadow.vert DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/debug.frag DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/debug.vert DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_SOURCE_DIR}/image/wood.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/image )