project(07light)
add_executable(07light main.cpp)
file(REMOVE_RECURSE ${CMAKE_CURRENT_BINARY_DIR}/shader)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/obj.frag DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/obj.vert DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/obj_Ground.frag DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/obj_Ground.vert DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/mat.frag DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/mat.vert DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/light.frag DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/light.vert DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )