project(08lightmap)
add_executable(08lightmap main.cpp)
file(REMOVE_RECURSE ${CMAKE_CURRENT_BINARY_DIR}/shader)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/mat.frag DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/mat.vert DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/light.frag DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shader/light.vert DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shader )
file(COPY ${CMAKE_SOURCE_DIR}/image/emission.jpg DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/image )
file(COPY ${CMAKE_SOURCE_DIR}/image/container.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/image )
file(COPY ${CMAKE_SOURCE_DIR}/image/container_specular.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/image )